# tree-sitter-oberon-07

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
docs/: oberon-07.ebnf
examples/: Hello.Mod
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  declarations.txt  module.txt  procedures.txt  records.txt
